--- a/index.html
+++ b/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Types of Lists</title>
 </head>
 <body>
-    
+    <h1><b>Types of Lists</b></h1>
+    <h2><b>Order list</b></h2>
+    <ol>
+        <li>Apple</li>
+        <li>Banana</li>
+        <li>papaya</li>
+    </ol>
+    <h2><b>Unordered list</b></h2>
+    <ul>
+        <li>Apple</li>
+        <li>Banana</li>
+        <li>papaya</li>
+    </ul>
+    <h2><b>Description list</b></h2>
+    <dl>
+        <dt>Apple</dt>
+        <dd>A sweet, juicy fruit.</dd>
+        <dt>Banana</dt>
+        <dd>A long, curved tropical fruit.</dd>
+        <dt>Papaya</dt>
+        <dd>A tropical fruit with orange flesh.</dd>
+    </dl>
+    <h2><b>Nested List</b></h2>
+    <ul>
+        <li>Apple
+            <ul>
+                <li>Eaten fresh as a healthy snack</li>
+                <li>Used to make juice, jam, and pies</li>
+                <li>Helps improve digestion and health</li>
+             </ul>
+        </li>
+        <li>Banana
+            <ul>
+                <li>Eaten raw as a quick energy food</li>
+                <li>Rich in potassium and vitamin B6</li>
+                <li>Helps in maintaining healthy blood pressure</li>
+            </ul>
+        <li>Papaya
+            <ul>
+                <li>Eaten fresh as a healthy snack</li>
+                <li>Rich in vitamin C and fiber</li>
+                <li>Helps in digestion and weight management</li>
+            </ul>
+        </li>
 </body>
 </html>
+    
